[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/autoloads/save_load.gd" type="Script" id=1]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=2]

[node name="SaveLoad" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PopupPanel" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
rect_min_size = Vector2( 512, 300 )
theme = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true
}

[node name="New" type="Button" parent="PopupPanel/VBoxContainer"]
margin_right = 504.0
margin_bottom = 20.0
text = "New Slot"

[node name="ScrollContainer" type="ScrollContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 24.0
margin_right = 504.0
margin_bottom = 268.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/VBoxContainer/ScrollContainer"]
margin_right = 504.0
margin_bottom = 244.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slots" type="VBoxContainer" parent="PopupPanel/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 504.0

[node name="Clear" type="Button" parent="PopupPanel/VBoxContainer"]
margin_top = 272.0
margin_right = 504.0
margin_bottom = 292.0
text = "Clear All"

[connection signal="popup_hide" from="PopupPanel" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/Clear" to="." method="_on_Clear_pressed"]
